--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -6,35 +6,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
+        <h1>Анкета</h1>
+    </div>
     <div class="info">
-        <table>
-            <tr>
-                <td>
-                    <img class="avatar" src="https://catchar.io/storage/mp_screenshots/99/mp_scr_60f194c739f33.jpg" alt="аватар" width="300" height="300">
-                </td>
-                <td>
-                    <container class="container-info">
-                        <span class="regular-text name">Фамилия, Имя:</span>
-                        <b>Голодов Максим</b>
-                        <span class="regular-text age">Возраст:</span>
-                        <b>38 лет</b>
-                        <span class="regular-text experience">Опыт в программировании:</span>
-                        <b>2 месяца</b>
-                        <span class="regular-text about">Опыт в программировании:</span>
-                        <p><em>Инженер программист систем АСУ ТП</em> Люблю футбол и изучать языки программирования</p>
-                    </container>
-
-                </td>
-            </tr>
-        </table>
+        <div class="container-avatar">
+            <img class="avatar" src="https://catchar.io/storage/mp_screenshots/99/mp_scr_60f194c739f33.jpg" alt="аватар" height="200" width="200">
+        </div>
+        <div class="container-text">
+            <span class="regular-text name">Фамилия, Имя:</span>
+            <b>Голодов Максим</b>
+            <span class="regular-text age">Возраст:</span>
+            <b>38 лет</b>
+            <span class="regular-text experience">Опыт в программировании:</span>
+            <b>2 месяца</b>
+            <p>
+                <span class="regular-text about">О себе:</span>
+               Инженер программист систем АСУ ТП. 
+               Люблю футбол и изучать языки программирования</p>
+        </div>
     </div>
 
     <div class="targets">
         <h3 class="title-targets">Мои цели на обучение</h3>
         <ul class="list-targets">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li> - 1</li>
+            <li> - 2</li>
+            <li> - 3</li>
         </ul>
     </div>
 
